[package]
name = "minimal-demo"
version = "0.1.0"
authors = ["Dustin Carlno <dabreegster@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1" }
console_log = "0.1"
log = "0.4.11"
wasm-bindgen = "0.2"
winit = { version = "0.23.0", features=["web-sys"] }

[dependencies.web_sys]
package = "web-sys"
version = "0.3.22"
features = [
    'console',
    "AddEventListenerOptions",
    'CssStyleDeclaration',
    'BeforeUnloadEvent',
    'Document',
    'DomRect',
    'Element',
    'Event',
    'EventTarget',
    'FocusEvent',
    'HtmlCanvasElement',
    'HtmlElement',
    'KeyboardEvent',
    'MediaQueryList',
    'MediaQueryListEvent',
    'MouseEvent',
    'Node',
    'PointerEvent',
    'Window',
    'WheelEvent'
]
