[package]
name = "minimal-demo"
version = "0.1.0"
authors = ["Dustin Carlno <dabreegster@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1" }
console_log = "0.1"
glow = { version = "0.6.0", features=["web-sys"] }
log = "0.4.11"
wasm-bindgen = "0.2"
web-sys = "0.3.22"
winit = { version = "0.23.0", features=["web-sys"] }
